--- a/A1.css
+++ b/A1.css
@@ -208,7 +208,7 @@ ul li:hover ul.dropdown2 {
 
   .myinfo {
     display:block;
-    color: white;
+    color: black;
     font-weight: bold;
     font-size:20px;
   }
