--- a/aboutme.css
+++ b/aboutme.css
@@ -3,34 +3,31 @@
   src: url(akira_expanded/Akira.otf);
 }
 
-@font-face{
-  font-family: myFont2;
-  src: url(nexa/Nexa-Heavy.ttf);
-}
-
 *{
   margin: 0;
   padding: 0;
   font-family: myFont, Arial;
 }
+
 .banner{
   width: 100%;
-  height: 100vh;
-  background-image: linear-gradient(rgba(0,0,0,0.55),rgba(0,0,0,0.55)), url(images/background.webp);
-  background-size: cover;
+  height: 12vh;
+  background-color: black;
+  /*background-size: cover;
   background-position: center;
+  */
 } 
 
 .logo {
   width: 50px;
   cursor: pointer;
-  margin-left: -50px;
+  margin-left: -20px;
 }
 
 .navbar {
- width: 85%; 
+ width: 90%; 
  margin: auto;
- padding: 35px 0;
+ padding: 40px 30px;
  display: flex;
  align-items: center;
  justify-content: space-between;
@@ -45,7 +42,7 @@
 
 .navbar ul li a {
   text-decoration: none;
-  color: white;
+  color: black;
   text-transform: uppercase;
 }
 
@@ -53,7 +50,7 @@
   content: '';
   height: 2px;
   width: 0;
-  background: rgb(255, 0, 123);
+  background: gray;
   position: absolute;
   left: 0;
   bottom: -5px;
@@ -64,25 +61,75 @@
   width: 100%;
 }
 
-.about-me{
-margin-top: 10%;
-margin-left: 10%;
+.content {
+  width:100%;
+  position: absolute;
+  top: 35%;
+  transform: translateY(-10%);
+  text-align: center;
+  color: black;
 }
 
-.profile-picture{
-  width: 300px;
-  display: inline-block;
-  vertical-align: top;
+.content h1 {
+  font-size: 100px;
 }
 
-.myinfo {
-  display:inline-block;
-  color: white;
+/*.content h1 {
+  margin: 20px auto;
+  font-weight: 100;
+  line-height: 25px;
+} */
+
+button {
+  width: 200px;
+  padding: 15px 0;
+  text-align: center;
+  margin:20px 10px;
+  border-radius: 10px;
   font-weight: bold;
-  font-family: myFont2;
-  margin-left: 50px;
-  font-size:20px;
+  background-color: black;
+  color: white;
+  cursor: pointer;
+  position: relative;
+  overflow: hidden;
+} 
+
+button:hover {
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.25);
 }
+
+button:active {
+  background-color: rgba(255, 0, 123, 0);
+}
+
+.bottom {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  color: black;
+  font-size: 50px;
+}
+
+/*span {
+  background:rgb(255, 0, 123);
+  height: 100%;
+  width: 0;
+  border-radius: 25px;
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  z-index: ;
+  transition: 0.2s;
+}
+
+button:hover span {
+  width:100%;
+}
+
+button:hover {
+  border:none;
+}
+*/
 
 ul li ul.dropdown1 li {
   display: block;
@@ -95,14 +142,14 @@ ul li ul.dropdown1 li {
 
 ul li ul.dropdown1 {
   width: 100%;
-  background: rgb(255, 0, 123);
+  background: gray;
   position: absolute;
-  /*z-index: 999;*/
+  z-index: 999;
   display: none;
 }
 
 ul li a:hover {
-  background: rgb(255, 0, 123);
+  background: gray;
   transition: 1s;
 }
 
@@ -121,17 +168,36 @@ ul li ul.dropdown2 li {
 
 ul li ul.dropdown2 {
   width: 100%;
-  background: rgb(255, 0, 123);
+  background: gray;
   position: absolute;
   /*z-index: 999;*/
   display: none;
 }
 
 ul li a:hover {
-  background: rgb(255, 0, 123);
+  background: gray;
   transition: 1s;
 }
 
 ul li:hover ul.dropdown2 {
   display: block;
+}
+
+.about-me{
+display: inline-block;
+margin-top: 10%;
+margin-left: 10%;
+}
+
+.profile-picture{
+  height: 50%;
+  vertical-align: top;
+}
+
+.myinfo {
+  color: white;
+  font-weight: bold;
+  font-family: myFont2;
+  margin-left: 50px;
+  font-size:40px;
 }
